@@ -9,6 +9,7 @@ requires 'Perl::Critic::Policy::Objects::ProhibitIndirectSyntax'               =
 requires 'Perl::Critic::Policy::Subroutines::ProhibitAmpersandSigils'          => '1.126';
 requires 'Perl::Critic::Policy::ValuesAndExpressions::ProhibitArrayAssignAref' => '90';
 requires 'Perl::Critic::Policy::Variables::ProhibitConditionalDeclarations'    => '1.126';
+requires 'Perl::Critic::Policy::Variables::ProhibitLoopOnHash'                 => '0.005';
 requires 'Scalar::Util';
 requires 'version';
 
