@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add LoopOnHash policy
 
 0.026     2018-02-16 20:50:14 EST
   - Update Prototypes policy to recognize more ways of activating the signatures feature
